=remove installation instructions